# kinectLaserCalibration

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
octave/: PointAlignerTest.m  applyCorrection.m  assoc.m  computeError.m  computeJacobian.m  kinect.m  laser.m  laserJacobianTest (copy).m  laserJacobianTest STABLE.m  laserJacobianTest.m  laserJacobianTest1PARAMETERWORKING.m  laserJacobianTest_LINEAR.m  laserJacobianTest_LINEAR_CARTESIAN_XY.m  laserJacobianTest_LINEAR_POLAR.m  laserJacobianTestk1k2.m  laserdataset.m  laserdatasetOLD.m  pointAlignerChi2.m  pointAlignerIteration.m  pointAlignerLoop.m  polarToCartesian.m  transformPoints.m
src/: fancyMap.h  fancyViewer.cpp  fancyViewer.h  geohelper.cpp  geohelper.h  laser.cpp  laser.h  laser.ui  laserWindow.cpp  laserWindow.h  leastSquaresSolver.cpp  leastSquaresSolver.h  leastSquaresSolverCalib.cpp  leastSquaresSolverCalib.h  main.cpp  safeContainer.cpp  safeContainer.h  solver.h  spinner.cpp  spinner.h
